--- a/jamie-reidy.html
+++ b/jamie-reidy.html
@@ -7,285 +7,150 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem 1.25rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin:0 0 .25rem;text-transform:uppercase;}
+  .prospect-tagline{margin:0 0 .15rem;font-size:1rem;font-weight:600;}
+  .prospect-subtitle{margin:0;font-size:.9rem;opacity:.9;}
 
-  .prospect-hero-main {
-    flex: 1 1 60%;
-    max-width: 70%;
-    min-width: 260px;
-  }
+  /* Grade Card */
+  .prospect-grade-card{min-width:200px;padding:1rem 1.25rem;border-radius:12px;background:rgba(255,255,255,.15);
+    border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label{font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score{font-family:'Archivo Black';font-size:2.2rem;margin:.15rem 0;}
+  .grade-tier{font-size:.9rem;font-weight:600;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  /* Recommendation Pill */
+  .recommendation-pill{display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box{width:12px;height:12px;border-radius:3px;}
+  .pill-yellow{background:#eab308;} /* Strong Recommendation */
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
+  /* Meta Blocks */
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
+  /* Content Blocks */
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list li{font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
 </style>
 </head>
+
 
 <body>
 <div class="prospect-page">
 
-  <!-- HERO -->
+  <!-- ================= HERO ================= -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">JAMIE REIDY</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Podium Sweep Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Harvard University · Rowing 🚣 · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Jamie Reidy</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Harvard University · Rowing · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">91</div>
-      <div class="grade-tier">Round 1–2 Candidate</div>
-      <div class="grade-note">Captain-caliber performer with Podium Sweep motor</div>
+      <div class="grade-tier">Round 1–2</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <div class="pill-box pill-yellow"></div>
+        <span>Strong Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- META -->
+
+  <!-- ================= META ================= -->
   <section class="prospect-meta">
-    <!-- Prospect Info -->
+
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Harvard University</span></li>
-        <li><span>Major</span><span class="meta-value">Applied Mathematics</span></li>
+        <li><span>Major</span><span class="meta-value">Applied Mathematics / Economics</span></li>
         <li><span>Minor</span><span class="meta-value">N/A</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.93</span></li>
-        <li><span>Sport</span><span class="meta-value">Rowing 🚣</span></li>
+        <li><span>Sport</span><span class="meta-value">Rowing</span></li>
         <li><span>Hometown</span><span class="meta-value">Bedford, NH</span></li>
       </ul>
     </div>
 
-    <!-- MAP Profile -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">1321</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">13 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">15 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">13 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            10. Podium Sweep<br>
-            (Competitive Personality · relentless goal-setting · discipline under pressure)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Transactional Leader<br>
-            (In-the-Bonus · incentives · accountability)
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">13 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">95.9%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">93.8%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">85.1%</span></li>
+        <li><span>Personality</span><span class="meta-value">Podium Sweep (Competitive, High-Discipline)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Transactional Leader (Incentives, Accountability)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Idea-Oriented (Strategic, Solution-Creative)</span></li>
       </ul>
     </div>
+
   </section>
 
-  <!-- OVERVIEW -->
+
+
+  <!-- ================= CONTENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Jamie is a four-star Podium Sweep competitor with clear captain upside — a profile built on discipline,
-      structure, and steady production over the full fellowship. She balances varsity rowing at Harvard with a
-      demanding Applied Mathematics course load and still manages to show up as one of MAP’s most reliable,
-      all-season contributors.
-      <br><br>
-      Her Podium Sweep wiring shows up in how she approaches work: process-focused, committed to getting better
-      every rep, and comfortable holding herself to a high standard. Layered with a Transactional “In-the-Bonus”
-      leadership style, Jamie is highly responsive to clear expectations and goalposts — she thrives when scoreboards,
-      deadlines, and incentives are visible, and uses them to keep herself and her teammates on pace.
-      <br><br>
-      From a partner lens, she projects as a durable, low-drama analyst who will raise the floor on a class:
-      strong academics, proven time management, and a track record of simply doing the work, on time, the right way.
+      Jamie is a four-star Podium Sweep competitor with clear captain upside — a profile built on discipline, structure, and
+      steady production over the fellowship. She balances varsity rowing at Harvard with a demanding Applied Mathematics course
+      load and still shows up as one of MAP’s most reliable season-long contributors.<br><br>
+      Her Podium Sweep wiring is evident — structured, high-standard, and process-focused. Paired with a Transactional
+      "In-the-Bonus" leadership style, she thrives in environments with targets, deadlines, and accountability. From a partner
+      lens, she profiles as a low-drama, high-output analyst who stabilizes a class with preparation and effort.
     </p>
   </section>
 
-  <!-- STRENGTHS -->
+
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Podium Sweep competitor:</strong> Competitive Personality with relentless goal-setting and comfort chasing high standards.</li>
-      <li><strong>Quantitative foundation:</strong> Applied Mathematics at Harvard; exposure to probability, linear algebra, and econ modeling.</li>
-      <li><strong>High consistency:</strong> Strong execution across the MAP season with a solid track record of on-time, complete assignments.</li>
-      <li><strong>Rowing discipline:</strong> Balances 20+ hours per week of training and competition with high academic performance.</li>
-      <li><strong>Transactional leadership style:</strong> “In-the-Bonus” leader who responds to and reinforces clear incentives, targets, and accountability.</li>
-      <li><strong>Structured communicator:</strong> Uses deliberate pacing and clear framing; comfortable slowing down to keep responses organized.</li>
-      <li><strong>Professional intent:</strong> Actively networks with MAP IB alumni and seeks out feedback to position herself for front-office roles.</li>
+      <li>Podium Sweep competitor with strong goal-setting instincts.</li>
+      <li>Quantitative foundation — Applied Mathematics at Harvard.</li>
+      <li>High consistency — strong MAP execution across the season.</li>
+      <li>Rowing discipline + elite time management under volume.</li>
+      <li>Transactional leadership — thrives with incentives + structure.</li>
+      <li>Clear, organized communicator with controlled pacing.</li>
+      <li>Actively networks with IB alumni; coachable + feedback-driven.</li>
     </ul>
   </section>
 
-  <!-- AREAS FOR DEVELOPMENT -->
+
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Can lean toward straightforward, structured problems — continued exposure to ambiguous, unstructured cases will broaden her range.</li>
-      <li>Would benefit from more “sprint-speed” reps in fast, high-pressure group settings to match her consistency with sharper urgency.</li>
-      <li>Has room to add more vivid, story-driven examples in behavioral interviews to showcase the depth of her experiences.</li>
+      <li>More reps in ambiguous case settings to broaden adaptability.</li>
+      <li>Develop sprint-speed response handling in high-pressure rooms.</li>
+      <li>Enhance storytelling detail in behavioral interview examples.</li>
     </ul>
   </section>
 
-  <!-- PROJECTION -->
+
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Jamie grades out as a Round 1–2 MAP prospect with captain-caliber upside. She combines quant skills,
-      varsity-athlete discipline, and a Podium Sweep motor with a reliable, incentives-aware leadership style.
-      In a 2027 analyst class, she projects as a durable, high-output teammate who will quietly stabilize the room,
-      hit deadlines, and raise the standard for preparation and effort.
+      Jamie grades out as a Round 1–2 MAP prospect with captain-level upside. She combines quant ability, varsity discipline,
+      and a Podium Sweep motor with reliable execution and incentive awareness. With more real-time communication reps and
+      storytelling depth, she projects into a high-trust, high-output analyst who raises preparation standards across a team.
     </p>
   </section>
 
