--- a/nathan-west.html
+++ b/nathan-west.html
@@ -1,202 +1,87 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Nathan West — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+  body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
+  .prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
+  .prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
+  .prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
+  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;
+    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
+  .grade-tier {font-size:.9rem;font-weight:600;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* Pills */
+  .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box {width:12px;height:12px;border-radius:3px;}
+  .pill-red {background:#ef4444;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  /* META */
+  .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column {flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title {font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list {list-style:none;margin:0;padding:0;}
+  .meta-list li {display:flex;justify-content:space-between;padding:.28rem 0;
+    border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value {text-align:right;margin-left:1rem;}
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
+  /* CONTENT */
+  .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body {font-size:.9rem;line-height:1.52;}
+  .section-list li {font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
-  <!-- HERO -->
-  <!-- ============================= -->
+  <!-- ============ HERO ============ -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">NATHAN WEST</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️ Prospect · Underdog Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Columbia University · Track &amp; Field 🏃‍ · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Nathan West</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">Columbia University · Track & Field · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">8.7</div>
-      <div class="grade-tier">Round 4–5 Candidate</div>
-      <div class="grade-note">High-upside profile with strong interviews and underdog drive</div>
+      <div class="grade-score">83</div>
+      <div class="grade-tier">Round 4–5</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <span>Watchlist Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- META -->
-  <!-- ============================= -->
+
+  <!-- ============ META ============ -->
   <section class="prospect-meta">
+
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Columbia University</span></li>
         <li><span>Major</span><span class="meta-value">Financial Economics</span></li>
-        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Minor</span><span class="meta-value">Undecided</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>Sport</span><span class="meta-value">Track &amp; Field</span></li>
+        <li><span>GPA</span><span class="meta-value">3.5</span></li>
+        <li><span>Sport</span><span class="meta-value">Track & Field</span></li>
         <li><span>Hometown</span><span class="meta-value">Rexford, NY</span></li>
       </ul>
     </div>
@@ -204,77 +89,63 @@
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Fall Rank</span><span class="meta-value">8 / 63</span></li>
-        <li><span>GPA</span><span class="meta-value">3.5</span></li>
-        <li><span>Personality</span><span class="meta-value">15. Underdog</span></li>
-        <li><span>Performance</span>
-          <span class="meta-value">
-            Strong résumé + interviews · several late assignments · Playoffs performance below expectations
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">26 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">84.1%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">93.8%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">95.4%</span></li>
+        <li><span>Personality</span><span class="meta-value">Underdog (Determined, Persistent)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Laissez-Faire Leader (Trust-Based, Hands-Off)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Supportive (Steady, Reliable)</span></li>
       </ul>
     </div>
+
   </section>
 
-  <!-- ============================= -->
-  <!-- OVERVIEW -->
-  <!-- ============================= -->
+
+  <!-- ============ CONTENT ============ -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Nathan is one of the most intriguing “Underdog” archetypes in the entire Diamond League class — highly motivated, deeply
-      competitive, and used to doing more with less. His background tells you everything: a high school athlete without a coach,
-      self-training his way into earning Division I recruitment. That same mentality shows up in his interview presence, where he
-      consistently impresses with maturity, clarity, and quiet confidence.
+      Nathan is one of the most intriguing “Underdog” archetypes in the entire Diamond League class — highly motivated, deeply competitive, and used to doing more with less. His background tells you everything: a high school athlete without a coach, self-training his way into earning Division I recruitment. That same mentality shows up in his interview presence, where he consistently impresses with maturity, clarity, and quiet confidence.
       <br><br>
-      His high ranking reflects strong early-season execution and exceptional interview performances, though it does slightly
-      overstate his consistency: Nathan submitted several assignments late and did not deliver at the level expected during the
-      Playoffs. Still, his résumé is one of the stronger ones in the class — with meaningful real estate private equity,
-      investment analysis, and leadership experience across Project Destined, MAP, and Columbia Alpha Partners.
+      His high ranking reflects strong early-season execution and exceptional interview performances, though it does slightly overstate his consistency: Nathan submitted several assignments late and did not deliver at the level expected during the Playoffs. Still, his résumé is one of the stronger ones in the class — with meaningful real estate private equity, investment analysis, and leadership experience across Project Destined, MAP, and Columbia Alpha Partners.
       <br><br>
-      With more consistent follow-through, Nathan has the potential to significantly outperform his projection. He’s a strong,
-      driven candidate whose best work often comes when his back is against the wall.
+      With more consistent follow-through, Nathan has the potential to significantly outperform his projection. He’s a driven candidate whose best work often comes when his back is against the wall.
     </p>
   </section>
 
-  <!-- ============================= -->
-  <!-- STRENGTHS -->
-  <!-- ============================= -->
+
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Underdog mentality:</strong> history of overcoming adversity; internally motivated and relentlessly driven.</li>
-      <li><strong>Strong interview presence:</strong> clear communicator with confident, grounded delivery.</li>
-      <li><strong>Real estate + finance depth:</strong> Project Destined, MAP IB casework, CRE director role.</li>
-      <li><strong>High maturity:</strong> D1 athlete balancing training, consulting-style work, and leadership commitments.</li>
-      <li><strong>Operational resilience:</strong> calm under pressure; excels in real-time problem solving.</li>
-      <li><strong>Leadership foundation:</strong> NCAA SAAC rep + CRE leadership + youth mentorship programs.</li>
+      <li>Underdog mentality — self-driven, resilient, motivated to close gaps.</li>
+      <li>Strong interview presence — clear communication + real composure.</li>
+      <li>Real estate/finance background — Project Destined + MAP CRE work.</li>
+      <li>High maturity + poise in live environments.</li>
+      <li>Operational resilience — calm under pressure + problem solving.</li>
+      <li>Leadership experience — NCAA SAAC + CRE leadership roles.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
+
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Improve consistency — reduce late submissions and maintain focus through the full MAP season.</li>
-      <li>Deliver more polished and complete assignment outputs in high-stakes weeks.</li>
-      <li>Enhance technical precision and speed to match peers with stronger modeling experience.</li>
+      <li>Increase submission reliability and season-long consistency.</li>
+      <li>Ensure deliverables reach polished, complete final state.</li>
+      <li>Deepen technical modeling speed + precision.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- PROJECTION -->
-  <!-- ============================= -->
+
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A 3-Star, Round 4–5 MAP prospect with meaningful upside — especially given his strong interviews and authentic
-      Underdog DNA. Nathan’s competitiveness, drive, and adaptability give him a real shot to outperform expectations during the
-      2027 recruiting cycle. If he tightens his consistency and raises his technical polish, he has the ingredients to become a
-      much stronger late-cycle investment banking candidate than his grade initially suggests.
+      A 3-Star, Round 4–5 MAP prospect with meaningful upside — especially given his strong interviews and Underdog profile. Nathan’s competitiveness, drive, and adaptability give him a real shot to outperform expectations during the 2027 recruiting cycle. If he sharpens technical skills and consistency, he could evolve into a compelling analyst candidate who exceeds early projections.
     </p>
   </section>
 
 </div>
+</body>
+</html>
+
